cabal-version:      3.0

name:               plutus-tx-extra
version:            0.1.0.0

maintainer:         team@encoins.io

flag frontend
    description:
        Builds executables for the frontend.
    default: False
    manual:  True

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code

library
    import: lang
    exposed-modules:
      PlutusTx.Extra.ByteString
      PlutusTx.Extra.Prelude
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      containers                             -any,
      data-default                           -any,
      extra                                  -any,
      file-embed                             -any,
      freer-simple                           -any,
      from-sum                               -any,
      flat                                   -any,
      lens                                   -any,
      lens-aeson                             -any,
      mtl                                    -any,
      openapi3                               -any,
      random                                 -any,
      text                                   -any,
      time                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
    if flag(frontend)
      build-depends:
        plutus-tx-js                         -any,
    else
      build-depends:
        plutus-tx                            -any,
    hs-source-dirs: src